downloadfilecontroller下载文件全部改名为wenjian